2009-02-05  Mikael Djurfeldt  <mikael@djurfeldt.com>

	* application_mapper.cc (ApplicationMapper::mapConnectivity):
	Compute and propagate a unique "port code" for each port name.

2008-12-02  Mikael Djurfeldt  <mikael@djurfeldt.com>

	* Switch to CamelCase.
	
2008-11-16  Mikael Djurfeldt  <mikael@djurfeldt.com>

	* Makefile.am: Added eventcounter.

	* eventcounter.cc: New file.

2008-11-06  Mikael Djurfeldt  <mikael@djurfeldt.com>

	* VisualiseNeurons.cpp: #include <cstring>.  (Should change to C++
	code.)

	* music.cc (launch): Added standard configuration variable "wd",
	specifying working directory.

2008-11-05  Mikael Djurfeldt  <mikael@djurfeldt.com>

	* eventgenerator.cc: New file.

	* Makefile.am: Added eventgenerator.cc.

2008-11-03  Mikael Djurfeldt  <mikael@djurfeldt.com>

	* eventsink.cc, eventselect.cc: New files.

	* Makefile.am: Added eventsink, eventselect.

	* eventsource.cc: Error checking when opening files.

	* Makefile.am: Compile viewevents conditionally.

2008-11-02  Mikael Djurfeldt  <mikael@djurfeldt.com>

	* eventsource.cc: Extended to support global and local indices and
	roundrobin index maps.

2008-10-30  Mikael Djurfeldt  <mikael@djurfeldt.com>

	* Changes to implement propagation of configuration
	information and routing of spikes.

2008-10-10  Mikael Djurfeldt  <mikael@djurfeldt.com>

	* eventsource.cc: Updated to use global_index.

2008-10-08  Mikael Djurfeldt  <mikael@djurfeldt.com>

	* eventsource.cc, datafile.h, datafile.cc: New files.

	* Makefile.am: Added eventsource.

2007-11-06  Mikael Djurfeldt  <mikael@djurfeldt.com>

	* music.cc (BGL): #include <rts.h>

2007-11-02  Mikael Djurfeldt  <mikael@djurfeldt.com>

	* application_map.hh: #include "rudeconfig/src/config.h" instead
	of <rude/config.h>.

	* Makefile.am (music_CXXFLAGS): Added -I$(top_srcdir).

	* music.cc (get_rank): Support OPENMPI.

2007-11-01  Mikael Djurfeldt  <mikael@djurfeldt.com>

	* parse.hh, parse.cc: Moved to src.

	* music.cc: Rewritten.
