@@ -1,3 +1,8 @@
+2009-02-10  Mikael Djurfeldt  <mikael@djurfeldt.com>
+
+	* music.cc (getRank): Added code to support newer (1.3.x) versions
+	of OpenMPI.
+
 2009-02-05  Mikael Djurfeldt  <mikael@djurfeldt.com>
 
 	* application_mapper.cc (ApplicationMapper::mapConnectivity):
